crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_local_annotation_specializing_an_enclosing_generic_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn keep(value: a) a {\n    let ignored: a = 42\n    value\n}\n"
---
alder::type::generic_specialization

  × this implementation does not work for every `a`
   ╭─[/project/src/main.ald:1:1]
 1 │ ╭─▶ fn keep(value: a) a {
 2 │ │       let ignored: a = 42
 3 │ │       value
 4 │ ├─▶ }
   · ╰──── the signature promises an independent `a`, but the body requires `Number`
   ╰────
  help: the caller chooses `a` for each call; the body must work for every
        type allowed by the declared bounds, not just `Number`. Check
        the operation or value that imposes this restriction; a trait
        implementation must preserve the trait's generic contract
