crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_missing_alternative_binding_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn read(input: Option[Number]) Number {\n    match input { Some(value) | None => value }\n}\n"
---
alder::canonicalize::alternative_bindings

  × match alternatives must bind the same names
   ╭─[/project/src/main.ald:2:33]
 1 │ fn read(input: Option[Number]) Number {
 2 │     match input { Some(value) | None => value }
   ·                                 ──┬─
   ·                                   ╰── reported here
 3 │ }
   ╰────
  help: the first alternative binds [value]; this one binds []
