crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_missing_closed_error_match_case_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "error Failure {\n    :invalid(String),\n    :missing\n}\n\nfn render(value: Result[Number, Failure]) String {\n    match value {\n        Ok(number) => \"ok\",\n        Err(:invalid(message)) => message,\n    }\n}\n"
---
alder::type::non_exhaustive_match

  × this match does not cover every possible value
    ╭─[/project/src/main.ald:7:5]
  6 │     fn render(value: Result[Number, Failure]) String {
  7 │ ╭─▶     match value {
  8 │ │           Ok(number) => "ok",
  9 │ │           Err(:invalid(message)) => message,
 10 │ ├─▶     }
    · ╰──── uncovered patterns include Err(:missing)
 11 │     }
    ╰────
  help: add the missing cases or a fallback arm; guarded patterns and pins do
        not guarantee coverage
