crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_missing_instance_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "trait Display[a] {\n    fn display(value: a) String\n}\n\nfn main() {\n    display(1)\n}\n"
---
alder::trait::missing_instance

  × no implementation of `Display[Number]` was found
   ╭─[/project/src/main.ald:6:5]
 5 │ fn main() {
 6 │     display(1)
   ·     ───┬───
   ·        ╰── this use needs trait evidence
 7 │ }
   ╰────
  help: check the operand type and the implementations available for
        `Display[Number]`; a new implementation must satisfy Alder's
        implementation-head and ownership rules
