crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_nested_instance_obligation_chain_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn main() String {\n    show([(value: Number) Number -> value])\n}\n"
---
alder::trait::missing_instance

  × no implementation of `Show[fn(Number) Number]` was found
   ╭─[/project/src/main.ald:2:5]
 1 │ fn main() String {
 2 │     show([(value: Number) Number -> value])
   ·     ──┬─
   ·       ╰── this use needs trait evidence
 3 │ }
   ╰────
  help: check the operand type and the implementations available for
        `Show[fn(Number) Number]`; a new implementation must satisfy Alder's
        implementation-head and ownership rules
        
        obligation chain:
          Show[Array[fn(Number) Number]]
          -> Show[fn(Number) Number], required by a standard-library
        implementation
