crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_nested_trait_signature_parser_error_with_source.snap
---
source: crates/alder-driver/src/compile.rs
description: "trait Show[a] {\n    fn show(value: Array[]) String\n}\n"
---
alder::syntax

  × type argument lists cannot be empty
   ╭─[/project/src/main.ald:2:26]
 1 │ trait Show[a] {
 2 │     fn show(value: Array[]) String
   ·                         ┬┬
   ·                         │╰── add a type argument or remove `[]`
   ·                         ╰── this type argument list starts here
 3 │ }
   ╰────
