crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_open_error_match_hint_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn render(value: Result[Number]) String {\n    match value {\n        Ok(number) => \"ok\",\n        Err(:invalid(message)) => message,\n    }\n}\n"
---
alder::type::non_exhaustive_match

  × this match does not cover every possible value
   ╭─[/project/src/main.ald:2:5]
 1 │     fn render(value: Result[Number]) String {
 2 │ ╭─▶     match value {
 3 │ │           Ok(number) => "ok",
 4 │ │           Err(:invalid(message)) => message,
 5 │ ├─▶     }
   · ╰──── uncovered patterns include Err(_)
 6 │     }
   ╰────
  help: add the missing cases or a fallback arm; guarded patterns and pins do
        not guarantee coverage
