crates/alder-driver/src/snapshots/alder_driver__compile__tests__renders_option_propagation_in_result_function_without_color.snap
---
source: crates/alder-driver/src/compile.rs
description: "fn read(value: Option[Number]) Result[Number] { Ok(value?) }\n"
---
alder::type::type_mismatch

  × type mismatch: expected `Option[b]`, found `Result[Number, [a]]`
   ╭─[/project/src/main.ald:1:52]
 1 │ fn read(value: Option[Number]) Result[Number] { Ok(value?) }
   ·                                                    ───┬──
   ·                                                       ╰── type requirement originates here
   ╰────
